src/main/java/com/example/kataAPI/errors/Global_exception_handler.java
package com.example.kataAPI.errors;

import java.util.Scanner;

public class Global_exception_handler {
    public static void main(String[] args) {
        Scanner leer = new Scanner(System.in);

    }
}
